--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
 		"deploy:full": "npm run build:ui && cd ../../part3 && git add . && git commit -m uibuild && git push"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.11.1",
-		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.14.8",
 		"@reduxjs/toolkit": "^1.9.5",
 		"axios": "^1.5.0",
 		"prop-types": "^15.8.1",
@@ -35,6 +32,7 @@
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@vitejs/plugin-react": "^4.0.4",
+		"autoprefixer": "^10.4.16",
 		"cypress": "^13.1.0",
 		"eslint": "^8.48.0",
 		"eslint-plugin-cypress": "^2.14.0",
@@ -44,6 +42,8 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"jest": "^29.6.4",
 		"jest-environment-jsdom": "^29.6.4",
+		"postcss": "^8.4.31",
+		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.9"
 	},
 	"jest": {
